[package]
name = "erc8128"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[dependencies]
alloy-primitives.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true

[lints]
workspace = true
