[package]
name = "erc8128"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = []
k256 = ["dep:k256"]
alloy = ["dep:alloy-signer"]
axum = ["dep:axum", "dep:http-body-util", "dep:tower"]
reqwest = ["dep:reqwest"]

[dependencies]
alloy-primitives.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true

k256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }
alloy-signer = { version = "1", optional = true }
axum = { version = "0.8", optional = true }
http-body-util = { version = "0.1", optional = true }
tower = { version = "0.5", optional = true }
reqwest = { version = "0.12", default-features = false, optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt"] }

[lints]
workspace = true
