[package]
name = "erc8128"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true

[features]
default = []
k256 = ["dep:k256"]
alloy = ["dep:alloy-signer"]
axum = ["dep:axum", "dep:http-body-util", "dep:tower"]
reqwest = ["dep:reqwest"]

[dependencies]
alloy-primitives.workspace = true
base64.workspace = true
rand.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true

k256 = { workspace = true, optional = true }
alloy-signer = { workspace = true, optional = true }
axum = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
reqwest = { workspace = true, optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "rt-multi-thread", "net"] }

[[example]]
name = "roundtrip"
required-features = ["k256"]

[[example]]
name = "reqwest_client"
required-features = ["k256", "reqwest"]

[[example]]
name = "axum_server"
required-features = ["k256", "axum"]

[lints]
workspace = true
